--- a/public/index.html
+++ b/public/index.html
@@ -43,8 +43,8 @@
       href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700"
       rel="stylesheet"
     />
-    <title>Argon Dashboard React by Creative Tim</title>
-    <script src="https://maps.googleapis.com/maps/api/js?key=YOUR_API_KEY_HERE"></script>
+    <title>Pollution Track</title>
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyA67z8wDnMtPvpn0WcRC0IrLIX3DnWnQBU"></script>
   </head>
   <body>
     <noscript> You need to enable JavaScript to run this app. </noscript>
